[tool.poetry]
name = "fox-tower-defense"
version = "0.6.0"
description = "Tower defense game written in Python using Pygame"
authors = ["Richard Fox <richardalanfox1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
PyTMX = "^3.31"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
