[tool.poetry]
name = "fox-tower-defense"
version = "0.6.0"
description = "Tower defense game written in Python using Pygame"
authors = ["Richard Fox <richardalanfox1990@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
PyTMX = "^3.31"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
play = "fox_tower_defense.game:main"
